Fix display of fa-times on mobile; fix margin of typing indicator

--- a/src/stylesheets/mobile.less
+++ b/src/stylesheets/mobile.less
@@ -20,6 +20,7 @@ html {
                                 color: black;
                             }
 
+                            display: block;
                             height: 40px;
                             width: 40px;
                             right: 0;
