--- a/src/stylesheets/typing-indicator.less
+++ b/src/stylesheets/typing-indicator.less
@@ -24,6 +24,7 @@
         position: relative;
         animation: 2s bulge infinite ease-out;
         vertical-align: middle;
+        margin-left: 8px;
 
         &.sk-typing-indicator-first {
             border-top-left-radius: 14px;
